[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafiquepasha30",email = "rafiquepasha30@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
